[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-rustls-native-roots"] }
serde_json = "1.0"
async-trait = "0.1"
dlog = { path = "../../toolbox//dlog" }
dotenv = "0.15"
